--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-resizable-panels": "^2.1.7",
     "use-immer": "^0.8.1"
   },
   "devDependencies": {
