--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@antv/x6": "^2.9.7",
     "@antv/x6-plugin-history": "^2.2.2",
     "@antv/x6-react-shape": "^2.1.2",
-    "@tauri-apps/api": "^1.5.3",
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "^2.2.2",
+    "@tauri-apps/plugin-fs": "^2.3.0",
+    "@tauri-apps/plugin-shell": "^2.2.1",
     "antd": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +24,7 @@
     "use-immer": "^0.8.1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.9",
+    "@tauri-apps/cli": "^2.5.0",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^3.0.0",
