--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,7 +2,7 @@
 name = "scene_builder"
 version = "1.5.0"
 description = "Tool to create SLP+ animation packs"
-authors = ["Scrab Joséline, I unpause"]
+authors = ["Scrab, I unpause"]
 license = ""
 repository = ""
 edition = "2021"
@@ -11,10 +11,10 @@ rust-version = "1.75.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.3.0", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "1.5.4", features = ["cli", "dialog-all", "fs-all", "path-all", "shell-open"] }
+tauri = { version = "2", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8.7"
@@ -25,6 +25,10 @@ nanoid = "0.4.0"
 bitflags = "2.3.3"
 fern = "0.6.2"
 log = "0.4.19"
+tauri-plugin-cli = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-opener = "2"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
